# prereg-quality-llm

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: model_config.yaml  rubric.json  schema.json
data/: osf_ids.txt
scripts/: clean_text.py  discover_ids.py  fetch_osf.py  merge_all.py  run_analysis.py  score_llm.py  scrape_osf.py  validate_scores.py
src/: __init__.py
src/analysis/: __init__.py  models.py
src/cleaning/: __init__.py  clean_text.py
src/merge/: __init__.py  merge_datasets.py
src/osf/: __init__.py  fetch_osf.py  id_scraper.py  scraper.py
src/osf_scraper/: __init__.py  cli.py  discovery.py  processing.py  scraper.py  utils.py
src/scoring/: __init__.py  build_prompt.py  llm_scorer.py
src/utils/: __init__.py  io.py  logging.py
src/validation/: __init__.py  validate_json.py
tests/: test_cli.py  test_id_scraper.py  test_process_registrations.py  test_token_bucket.py  test_utils.py
