[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osf-scraper"
version = "0.1.0"
description = "A Python package for scraping preregistration data from the Open Science Framework (OSF)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "osf-scraper contributors"},
]
keywords = ["osf", "preregistration", "open-science", "scraper", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "aiofiles>=23.0.0",
    "aiohttp>=3.8.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/youruser/osf-scraper"
Repository = "https://github.com/youruser/osf-scraper"
Issues = "https://github.com/youruser/osf-scraper/issues"

[project.scripts]
osf-discover  = "osf_scraper.cli:discover"
osf-scrape    = "osf_scraper.cli:scrape"
osf-process   = "osf_scraper.cli:process"
osf-analyse   = "osf_scraper.cli:analyse"
osf-remaining = "osf_scraper.cli:remaining"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
osf_scraper = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"